fix scrollbar

--- a/src/app/protected/tournaments/tournament-summary-teams-list/tournament-summary-teams-list.component.scss
+++ b/src/app/protected/tournaments/tournament-summary-teams-list/tournament-summary-teams-list.component.scss
@@ -3,9 +3,10 @@
   overflow-y: scroll;
   background: grey;
   box-shadow: inset 0 0 4px #707070;
+  border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: blue;
-  // border-radius: 10px;
+  background: lightgrey;
+  border-radius: 10px;
 }
